@startuml CUIClassDiagramm
skinparam shadowing true 

note "Le classi figlie di exception sono tutte eccezioni controllate e gestite dal controller" as N1
class App{
    - scene : Scene
    + {static} main(String[] args) : void
    - {static} loadFXML(String) fxml : Parent
      {static} setRoot(String fxml) : void
    + start(Stage stage) : void
}

class CalcController{
I metodi del controller e i suoi attributi 
sono disponibili nel diagramma "ControllerMethod"
}


exception Exception{
    + print(msgError) : void
}

exception EmptyStackException{

}

exception InsertVariableException{

}

exception WrongNumberException{

}

exception ArithmeticException{

}

EmptyStackException --|> Exception
InsertVariableException --|> Exception
WrongNumberException --|> Exception
ArithmeticException --|> Exception

EmptyStackException .. N1
InsertVariableException .. N1 
WrongNumberException .. N1
ArithmeticException .. N1


App --> CalcController : contains
CalcController -- Exception : handle >
@enduml